# Sakhi-Backend

./: .dockerignore  .gitignore  Dockerfile  agent.py  api.py  conftest.py  emotion_detector.py  fly.toml  implementation_plan.md  landing_page_docs.md  main.py  pyproject.toml  requirements-api.txt  requirements.txt  run.py  skills-lock.json  start.sh  story_emitter.py  story_entrypoint.py  test_audio_gen.py  test_image_gen.py  test_real_story.py
.github/workflows/: ci.yml
agents/: .dockerignore  Dockerfile  emotion_detector.py  livekit.toml  requirements.txt  sakhi.py  story_agent.py
agents/services/: chat_image_service.py  emotion_detector.py  llm.py  session_summarizer.py
api/: auth_routes.py  chat_routes.py  curious_routes.py  dashboard_routes.py  dependencies.py  gentype_routes.py  limiter.py  routes.py  say_what_you_see_routes.py  story_routes.py
db/: __init__.py  migrations.py  pool.py
docs/: Project.MD  api_contract.md  architecture.md  curio_features.md  hume.MD  story_mode.md
scripts/: seed_story_bg.py  seed_swys_images.py
services/: accounts.py  chat_graph.py  chat_image_service.py  chat_sessions.py  checkpointer.py  dashboard.py  google_oauth.py  hume.py  image_gen.py  image_generation.py  jwt_service.py  llm.py  memory_manager.py  msg91.py  profiles.py  prompts.py  r2.py  say_what_you_see.py  session_summarizer.py  storage.py  stories.py  story_orchestrator.py  topics.py  tts_generation.py
tests/: test_agent.py  test_chat.py  test_curious.py  test_gentype.py  test_llm.py  test_sessions.py  test_story.py  test_story_pipeline.py
utils/: logging_config.py
